--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:site_name" content="Starbucks"  />
   <meta property="og:title" content="Starbucks Coffee Korea"  />
   <meta property="og:description" content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로,64개국에서 총 23,187개의 매점을 운영하고 있습니다"  />
-  <meta property="og:image" content="./images/starbucks_seo.jpg"  />
+  <meta property="og:image" content="./starbucks_seo.jpg"  />
   <meta property="og:url" content=""  />
 
   <!-- Twitter Card-->
@@ -21,17 +21,31 @@
   <meta property="twitter:site" content="Starbucks"  />
   <meta property="twitter:title" content="Starbucks Coffee Korea"  />
   <meta property="twitter:description" content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로,64개국에서 총 23,187개의 매점을 운영하고 있습니다"  />
-  <meta property="twitter:image" content="./images/starbucks_seo.jpg"  />
+  <meta property="twitter:image" content="./starbucks_seo.jpg"  />
   <meta property="twitter:url" content=""  />
     
   <!-- RESET CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"/>
   <!-- MAIN CSS -->
   <link rel="stylesheet" href="./css/main.css"  />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
+  <!-- Font-->
+  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
+
+  <!-- ICONS-->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   
 </head>
 <body>
-  안녕
+  <!-- HEADER -->
+  <header>
+    <div class="inner">
+      <a href="#" class="logo">
+        <img src="./images/logo.png" alt="Starbucks">
+      </a>
+    </div>
+  </header>
 </body>
 </html>
