--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:site_name" content="Starbucks"  />
   <meta property="og:title" content="Starbucks Coffee Korea"  />
   <meta property="og:description" content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로,64개국에서 총 23,187개의 매점을 운영하고 있습니다"  />
-  <meta property="og:image" content="./starbucks_seo.jpg"  />
+  <meta property="og:image" content="./images/starbucks_seo.jpg"  />
   <meta property="og:url" content=""  />
 
   <!-- Twitter Card-->
@@ -21,7 +21,7 @@
   <meta property="twitter:site" content="Starbucks"  />
   <meta property="twitter:title" content="Starbucks Coffee Korea"  />
   <meta property="twitter:description" content="스타벅스는 세계에서 가장 큰 다국적 커피 전문점으로,64개국에서 총 23,187개의 매점을 운영하고 있습니다"  />
-  <meta property="twitter:image" content="./starbucks_seo.jpg"  />
+  <meta property="twitter:image" content="./images/starbucks_seo.jpg"  />
   <meta property="twitter:url" content=""  />
     
   <!-- RESET CSS -->
@@ -45,6 +45,79 @@
       <a href="#" class="logo">
         <img src="./images/logo.png" alt="Starbucks">
       </a>
+
+      <!-- SUB MENU -->
+      <div class="sub-menu">
+        <ul class="sub-menu__menu">
+          <li><a href="#">Sing in</a></li>
+          <li><a href="#">My Starbucks</a></li>
+          <li><a href="#">Customer Service & Ideas</a></li>
+          <li><a href="#">Fine a Store</a></li>
+        </ul>
+        <div class="search">
+          <input type="text" placeholder="통합검색" />
+          <span class="material-symbols-outlined">
+            search
+            </span>
+        </div>
+      </div>
+      <!-- MAIN MENU -->
+        <ul class="main-menu">
+          <li class="item">
+            <div class="item__name">COFFEE</div>
+              <div class="item__contents">
+                COFFEE
+                <div class="item__contents__menu">
+                </div>
+              </div>
+          </li>
+          <li class="item">
+            <div class="item__name">MENU</div>
+              <div class="item__contents">
+                MENU
+                <div class="item__contents__menu">  
+                </div>
+              </div>
+          </li>
+          <li class="item">
+            <div class="item__name">STORE</div>
+              <div class="item__contents">
+                STORE
+                <div class="item__contents__menu"> 
+              </div>
+            </div>
+          </li>
+          <li class="item">
+            <div class="item__name">RESPONSIBILITY</div>
+              <div class="item__contents">
+                RESPONSIBILITY
+                <div class="item__contents__menu">  
+                </div>
+              </div>
+          </li>
+          <li class="item">
+            <div class="item__name">STARBUCKS REWARDS</div>
+              <div class="item__contents">
+                STARBUCKS
+                <div class="item__contents__menu">
+                </div>
+              </div>
+          </li>
+          <li class="item">
+            <div class="item__name">COPERATE SALES</div>
+              <div class="item__contents">
+                COPERATE
+                <div class="item__contents__menu"></div>
+                </div>
+          </li>
+          <li class="item">
+            <div class="item__name">WHAT'S NEW</div>
+              <div class="item__contents">
+                WHAT
+                <div class="item__contents__menu"></div>
+              </div>
+          </li>
+        </ul>
     </div>
   </header>
 </body>
