--- a/index.html
+++ b/index.html
@@ -373,5 +373,16 @@
       </div>
     </div>
   </header>
+  <section class="visual">
+    <div class="inner">
+      <div class="slogan">
+        <img src="./images/visual_slogan.png" alt="스타벅스 슬로건 2023"  />
+        <a href="#" class="btn btn--light-green">자세히 보기</a>
+      </div>
+      <img src="./images/visual_item_1.png" alt="골든 미모사 그린 티" class="item1" />
+      <img src="./images/visual_item_2.png" alt="블랙 햅쌀 고봉 라떼" class="item2" />
+      <img src="./images/visual_item_3.png" alt="스타벅스 튜메릭 라떼" class="item3"  />
+    </div>
+  </section>
 </body>
 </html>
