두번재컨텐츠

--- a/index.html
+++ b/index.html
@@ -373,6 +373,7 @@
       </div>
     </div>
   </header>
+  <!-- VISUAL -->
   <section class="visual">
     <div class="inner">
       <div class="slogan">
@@ -382,6 +383,24 @@
       <img src="./images/visual_item_1.png" alt="골든 미모사 그린 티" class="item1" />
       <img src="./images/visual_item_2.png" alt="블랙 햅쌀 고봉 라떼" class="item2" />
       <img src="./images/visual_item_3.png" alt="스타벅스 튜메릭 라떼" class="item3"  />
+    </div>
+  </section>
+  <!-- NOTICE -->
+  <section class="notice">
+    <div class="notice-line">
+      <div class="bg-left"></div>
+      <div class="bg-right"></div>
+      <div class="inner">
+        <div class="inner__left">
+          <h1>공지사항</h1>
+          <div>탄소 중립 포인트제 실천 안내</div>
+          <a href="#"><span class="material-symbols-outlined">add_circle</span></a>
+        </div>
+        <div class="inner__right">
+          <h1>스타벅스 프로모션</h1>
+          <a href="#"><span class="material-symbols-outlined">check_circle</span></a>
+        </div>
+      </div>
     </div>
   </section>
 </body>
