--- a/index.html
+++ b/index.html
@@ -450,5 +450,13 @@
       </div>
     </div>
   </section>
+  <!-- ETHIOPIA -->
+  <section class="ethiopia">
+    <div class="inner">
+      <img src="./images/ethiopia_text.png" alt="ETHIOPIA" class="ethiopia__contents" />
+      <img src="./images/ethiopia_item.png" alt="ETHIOPIA" class="ethiopia__item" />
+      <a href="#" class="btn btn--gold">자세히 보기</a>
+    </div>
+  </section>
 </body>
 </html>
