--- a/index.html
+++ b/index.html
@@ -458,5 +458,14 @@
       <a href="#" class="btn btn--gold">자세히 보기</a>
     </div>
   </section>
+  <!-- FAVORITE -->
+  <section class="favorite">
+    <div class="inner">
+      <img src="./images/fav_text1.png" alt="첫번째 텍스트" class="favorite__content1"  />
+      <img src="./images/fav_text2.png" alt="두번째 텍스트" class="favorite__content2"  />
+      <a href="#" class="btn btn--white">자세히 보기</a>
+      <img src="./images/fav_img.png" alt="이미지" class="favorite__item" />
+    </div>
+  </section>
 </body>
 </html>
