--- a/index.html
+++ b/index.html
@@ -467,5 +467,25 @@
       <img src="./images/fav_img.png" alt="이미지" class="favorite__item" />
     </div>
   </section>
+  <!-- MAGAZINE -->
+  <section class="magazine">
+    <div class="inner">
+      <img src="./images/magazine_text.png" alt="매거진 글" class="magazine__content">
+      <img src="./images/magazine_img.png" alt="매거진 사진" class="magazine__item">
+      <a href="#" class="btn btn--black">자세히 보기</a>
+    </div>
+  </section>
+  <!-- STORE -->
+  <section class="store">
+    <div class="inner">
+      <img src="./images/store_text1.png" alt="첫번째 텍스트" class="store__text-1">
+      <img src="./images/store_text2.png" alt="두번째 텍스트" class="store__text-2">
+      <img src="./images/store_img1.png" alt="첫번째 이미지" class="store__img-1">
+      <img src="./images/store_img2.png" alt="두번째 이미지" class="store__img-2">
+      <img src="./images/store_img3.png" alt="세번째 이미지" class="store__img-3">
+      <img src="./images/store_img4.png" alt="네번째 이미지" class="store__img-4">
+      <a href="#" class="btn btn--black">매장찾기</a>
+    </div>
+  </section>
 </body>
 </html>
