--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
     </div>
   </section>
   <!-- FOOTER -->
-  <footer class="">
+  <footer>
     <div class="inner">
       <div class="footer__menu">
         <div class="left">
@@ -540,6 +540,38 @@
          <img src="./images/footer_logo.png" alt="하단부 로고"/>
         </div>
       </div>
+    </div>
+    <div class="footer__sub-menu">
+      <ul>
+        <li><a href="#">개인정보처리방침</a></li>
+        <li class="countour">|</li>
+        <li><a href="#">영상정보처리기기 운영관리 방침</a></li>
+        <li class="countour">|</li>
+        <li><a href="#">홈페이지 이용약관</a></li>
+        <li class="countour">|</li>
+        <li><a href="#">위치정보 이용약관</a></li>
+        <li class="countour">|</li>
+        <li><a href="#">스타벅스 카드 이용약관</a></li>
+        <li class="countour">|</li>
+        <li><a href="#">비회원 이용약관</a></li>
+        <li class="countour">|</li>
+        <li><a href="#">My DT Pass 서비스 이용약관</a></li>
+        <li class="countour">|</li>
+        <li><a href="#">윤리경영 이용약관</a></li>
+      </ul>
+    </div>
+    <!-- FOOTER BTN -->
+    <div class="footer__btn">
+      <a href="#" class="btn btn--white">찾아오시는 길</a>
+      <a href="#" class="btn btn--white">신규입점제의</a>
+      <a href="#" class="btn btn--white">사이트 맵</a>
+    </div>
+    <!-- FOOTER COPYLIGHT -->
+    <div class="footer__copylight">
+      <p>
+        Cloned by <span class="strong">inyoung</span> from Starbucks Korea,
+        2023 Starbucks Coffee Company. Al Right Reserved.
+      </p>
     </div>
   </footer>
 </body>
