--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
     <!-- FOOTER COPYLIGHT -->
     <div class="footer__copylight">
       <p>
-        Cloned by <span class="strong">inyoung</span> from Starbucks Korea,
+        Cloned by <span class="strong">inyoung</span> from Starbucks Korea,ⓒ<br />
         2023 Starbucks Coffee Company. Al Right Reserved.
       </p>
     </div>
